--- a/ui/src/field.css
+++ b/ui/src/field.css
@@ -1,7 +1,7 @@
 .board-cell {
     margin: 1px;
-    width: 30px;
-    height: 30px;
+    width: 45px;
+    height: 45px;
     background-color: lightgrey;
 }
 
@@ -15,4 +15,19 @@
 
 .board-cell.selected:hover {
     background-color: darkgreen;
+}
+
+.piece-white {
+    background-image: url(
+    'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg');
+}
+
+.piece-black {
+    background-image: url(
+    'https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg');
+}
+
+.piece-king {
+    background-image: url(
+    'https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_pdt45.svg');
 }
