--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,3 +56,14 @@
     width: fit-content;
     display: inline-block;
 }
+
+.tooltip {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px;
+    border-radius: 3px;
+    font-size: 12px;
+    white-space: nowrap;
+    z-index: 10;
+}
